Fixing an issue where the ID was popping into the name section

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -26,11 +26,11 @@
       <table>
         <thead>
           <tr>
-            <th>Name</th>
-            <th>Age</th>
-            <th>Gender</th>
-            <th>Ready for Transfer</th>
-            <th>Notes</th>
+            <th class="name">Name</th>
+            <th class="age">Age</th>
+            <th class="gender">Gender</th>
+            <th class="transferReady">Ready for Transfer</th>
+            <th class="notes">Notes</th>
           </tr>
         </thead>
         <tbody id="viewKoalas">
